[package]
name = "uptic"
version = "0.1.0"
authors = ["ferhatgec"]
edition = "2018"
description = "easy-to-use (/proc/)uptime crate"
keywords = ["term", "uptime", "linux", "rust"]
readme = "README.md"
repository = "https://github.com/ferhatgec/uptic/"
documentation = "https://docs.rs/uptic"
license = "MIT"

include = [
    ".gitignore",
    "src/lib.rs",
    "Cargo.toml",
]